--- a/Draawing.html
+++ b/Draawing.html
@@ -12,7 +12,7 @@
 	<p>Also, drawing is a kind of diary for me. When I travil to places, I will drawing something related. Years later, when I look at my drawings again, it will help me to recall my memories. </p>
 	<p>You can draw, or design a pattern taht you like, for exaple, the image below is a design by somebody who likes Ravenclaw. </p>
 	<p>These are the reasons why I like drawing, drawing has a lot of benefits, hope you like it and try it. </p>
-	<p><img src="image.jpeg" width="190" height="266" alt=""/></p>
+	<p><img src="Unknown.jpeg" width="128" height="128" alt=""/>
 </body>
 	
 </html>
