--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 	<p>I love reading Harry Potter and I'm a fan of the Harry Potter series. &nbsp;</p>
 <p><a href="Info of harry potter.html">see more</a></p>
 <p><a href="AI.html">Introduction to AI</a></p>
+	<p><img src="Screen Shot 2023-05-10 at 11.29.50.png" width="586" height="518" alt=""/></p>
 </body>
 </html>
