--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <meta charset="UTF-8">
 <title>Hello World</title>
 </head>
-
+<style>
+	body{
+	  background-image: url('深圳贝赛思双语学校banner copy.jpg');
+  background-repeat: no-repeat;
+	background-size:130% 180%;
+	}
+</style>
 <body>
 <h1>My name is Shiloh</h1>
 <h2>I am a student in BBSZ&nbsp;</h2>
