--- a/AI painter-pictures.html
+++ b/AI painter-pictures.html
@@ -9,6 +9,7 @@
 <p>AI painter----generate pictures</p>
 <img src="school.jpg" width="1440" height="861" alt=""/>
 <img src="cats.jpg" width="690" height="1134" alt=""/>
+  <p>i edited these pictures by using the AI painter to draw cats and dogs, and then i used photoshop as a modifier to modify my pictures. </p>
 <p><a href="index.html">back</a></p>
 </body>
 </html>
