--- a/AI painter-pictures.html
+++ b/AI painter-pictures.html
@@ -9,7 +9,9 @@
 <p>AI painter----generate pictures</p>
 <img src="school.jpg" width="1440" height="861" alt=""/>
 <img src="cats.jpg" width="690" height="1134" alt=""/>
-  <p>i edited these pictures by using the AI painter to draw cats and dogs, and then i used photoshop as a modifier to modify my pictures. </p>
+  <p>I edited these pictures by using the AI painter, "https://dream.ai/create".</p>
+  <p>In order to create interesting pictures, I typed in "cat with ball" as a theme; and then I used photoshop as a modifier to modify my pictures. Since AI painters work by analyzing existing images and then generating new ones based on certain parameters or themes, I think it will be fantastanating for me to get with this approach.</p>
+  <p>in another picture, I input "dog" as the theme, and the web uses advanced algorithms to create original artwork based on the theme specified. FInally, I combined bbsz with the dog, of letting it sit at the top of the house, by using PS to do so. It is amazing. </p>
 <p><a href="index.html">back</a></p>
 </body>
 </html>
